update of directories

--- a/linearGradientEffect/cssSimpleLinearGradient.html
+++ b/linearGradientEffect/cssSimpleLinearGradient.html
@@ -3,7 +3,7 @@
 		<meta charset="utf-8">
 		<meta http-equiv="x-ua-compatible" content="ie=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<title>Transform Effects Experiments</title>
+		<title>Linear Gradients Effects Experiments</title>
 		<style type="text/css">
 			body {
 				background-color: #fff;
@@ -15,7 +15,6 @@
 				background: linear-gradient(white, blue);
 
 			}
-
 
 			h1  {
 				text-align: center;
@@ -29,8 +28,6 @@
 				color: blue;
 				text-shadow: 1px 1px white;
 			}
-
-
 	
 		</style>
 	</head>
